--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- ====================== HERO SECTION ====================== -->
     <section class="hero-section">
         <div class="hero-content">
-            <h1 class="hero-title">أفضل طريقة للبدء مع Edumates</h1>
-            <p class="hero-subtitle">خرائط تعلّم واضحة + مصادر موثوقة + مجتمع داعم</p>
+            <h1 class="hero-title">مصادرك المنظمة لتعلّم البرمجة</h1>
+            <p class="hero-subtitle"></p>
             <a href="courses-page/courses.html" class="btn primary-btn cta-btn">ابدأ الآن مجانًا</a>
         </div>
         <div class="hero-image">
@@ -41,24 +41,24 @@
 
     <!-- ====================== FEATURES SECTION ====================== -->
     <section class="features-section">
-        <div class="feature-card">
-            <i class="fas fa-book feature-icon"></i>
-            <h3 class="feature-title">مجتمع تعليمي متميز</h3>
-            <p class="feature-desc">جميع الإرشادات التي تحتاجها في كل المجالات </p>
-        </div>
+    <div class="feature-card">
+        <i class="fas fa-book feature-icon"></i>
+        <h3 class="feature-title">اختر، تعلم، وناقش</h3>
+        <p class="feature-desc">تعلم من مصادر موثوقة مع دعم المجتمع في أي وقت.</p>
+    </div>
 
-        <div class="feature-card">
-            <i class="fas fa-chalkboard-teacher feature-icon"></i>
-            <h3 class="feature-title">مصادر مختارة بعناية — انطلق نحو الاحتراف</h3>
-            <p class="feature-desc">مصادر موثوقة تم اختيارها يدويًا </p>
-        </div>
+    <div class="feature-card">
+        <i class="fas fa-chalkboard-teacher feature-icon"></i>
+        <h3 class="feature-title">مصادر مختارة بعناية — انطلق نحو الاحتراف</h3>
+        <p class="feature-desc">مسارات منظمة ومصادر دقيقة تساعدك على التعلم بثقة.</p>
+    </div>
 
-        <div class="feature-card">
-            <i class="fas fa-comments feature-icon"></i>
-            <h3 class="feature-title">محادثة تفاعلية</h3>
-            <p class="feature-desc">تواصل مباشر مع زملاء وموجهين، اسأل، شارك، وتقدّم معًا.</p>
-        </div>
-    </section>
+    <div class="feature-card">
+        <i class="fas fa-comments feature-icon"></i>
+        <h3 class="feature-title">مجتمع برمجي يدعمك في كل خطوة</h3>
+        <p class="feature-desc">تواصل مع زملائك وموجهين، اسأل، شارك، وتقدّم معًا.</p>
+    </div>
+</section>
 
     <!-- ====================== HOW-IT-WORKS ====================== -->
     <section id="how-it-works" class="how-section">
@@ -135,4 +135,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
