--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero-section">
         <div class="hero-content">
             <h1 class="hero-title">مصادرك المنظمة لتعلّم البرمجة</h1>
-            <p class="hero-subtitle"></p>
+            <p class="hero-subtitle">ابدأ رحلتك التعليمية مع مصادر دقيقة.</p>
             <a href="courses-page/courses.html" class="btn primary-btn cta-btn">ابدأ الآن مجانًا</a>
         </div>
         <div class="hero-image">
@@ -61,36 +61,36 @@
 </section>
 
     <!-- ====================== HOW-IT-WORKS ====================== -->
-    <section id="how-it-works" class="how-section">
-        <div class="section-header">
-            <h2>كيف تعمل المنصة؟</h2>
-            <p>اختر مسارًا → احصل على خريطة تعليمية → تابع المصادر → تواصل مع المجتمع → احترف!</p>
-        </div>
-    </section>
+<section id="how-it-works" class="how-section">
+    <div class="section-header">
+        <h2>كيف تعمل المنصة؟</h2>
+        <p>اختر مسارك التعليمي، احصل على خريطة تعلم واضحة، تابع المصادر، شارك في المحادثة، وارتقِ إلى الاحتراف!</p>
+    </div>
+</section>
 
     <!-- ====================== FOR-WHOM ====================== -->
-    <section id="for-whom" class="for-whom-section">
-        <div class="section-header">
-            <h2>لمن هذا المسار؟</h2>
-            <p>للمبتدئين الراغبين في بداية منظمة،</p>
-        </div>
-    </section>
+   <section id="for-whom" class="for-whom-section">
+    <div class="section-header">
+        <h2>لمن هذا المسار؟</h2>
+        <p>هذا المسار مخصص للمبتدئين الذين يرغبون في بداية تعلم منظمة، مع خطوات واضحة ومصادر موثوقة لتطوير مهارات البرمجة بثقة.</p>
+    </div>
+</section>
 
     <!-- ====================== COURSES SECTION ====================== -->
-    <section id="courses" class="courses-section">
-        <div class="section-header">
-            <h2>خطط تعليمية متكاملة</h2>
-            <p>تتضمن خرائط طريق واضحة للبدء مع مصادر منتقاة بعناية</p>
-        </div>
-    </section>
+<section id="courses" class="courses-section">
+    <div class="section-header">
+        <h2>خطط تعليمية متكاملة</h2>
+        <p>خطط واضحة مع خرائط طريق دقيقة، ومصادر منتقاة بعناية لتسهيل رحلتك في تعلم البرمجة بثقة.</p>
+    </div>
+</section>
 
     <!-- ====================== ABOUT SECTION ====================== -->
-    <section id="about" class="about-section">
-        <div class="section-header">
-            <h2>عن Edumates</h2>
-            <p>المنصة الأمثل للبدء بثقة في أي مجال تريد.</p>
-        </div>
-    </section>
+<section id="about" class="about-section">
+    <div class="section-header">
+        <h2>عن Edumates</h2>
+        <p>Edumates هي منصتك لتعلّم البرمجة بطريقة منظمة، مع مصادر موثوقة، خرائط تعليمية واضحة، ومجتمع داعم يساعدك على البدء بثقة والتقدم بسرعة.</p>
+    </div>
+</section>
 
     <!-- ====================== FOOTER ====================== -->
     <footer id="footer" class="site-footer">
@@ -137,3 +137,4 @@
 </body>
 
 </html>
+
