--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -45,7 +45,7 @@
       <button class="chat-btn" id="chatBtn">
         <i class="fas fa-comments"></i> Chat
       </button>
-
+</section>
       <div class="roadmap-modal" id="roadmapModal">
         <div class="roadmap-content">
           <span class="close-roadmap" id="closeRoadmap">&times;</span>
@@ -638,3 +638,4 @@
 </body>
 
 </html>
+
