--- a/legal/terms-of-use.html
+++ b/legal/terms-of-use.html
@@ -36,12 +36,42 @@
       When registering via Google, the user is **responsible for maintaining the confidentiality** of their account and must not share it with others.
     </p>
 
-    <h2>4. Modifications</h2>
+    <h2>4. Conversations and Ratings</h2>
     <p>
-      We reserve the right to **modify these Terms** at any time. Any changes will be posted on this page with an updated revision date.
+      The platform's conversation and rating features are intended strictly for **educational, academic inquiries, and instructional suggestions only**. Users are **strictly prohibited** from including or sharing any personal, private, or sensitive information whatsoever within these interactions. Edumates is not responsible for any personal information a user chooses to disclose in a conversation or rating.
     </p>
 
-    <h2>5. Contact</h2>
+    <h2>5. Intellectual Property</h2>
+    <p>
+        The content, design, and all materials on the Edumates platform, including text, graphics, and code, are owned by or licensed to Edumates and are subject to copyright and other intellectual property rights. You may not use any Edumates trademarks without prior written permission. By submitting or posting any content (ratings, conversations, etc.) on the platform, you grant Edumates a worldwide, non-exclusive, royalty-free, transferable license to use, reproduce, distribute, prepare derivative works of, display, and perform that content in connection with the platform and Edumates' business.
+    </p>
+
+    <h2>6. Disclaimer of Warranties</h2>
+    <p>
+        The Edumates platform is provided on an "AS IS" and "AS AVAILABLE" basis. We make no warranties, expressed or implied, regarding the platform's operation or content. We do not warrant that the service will be uninterrupted, error-free, or secure. Your use of the service is at your sole risk.
+    </p>
+
+    <h2>7. Limitation of Liability</h2>
+    <p>
+        In no event shall Edumates, its affiliates, directors, or employees be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use the Service; (ii) any conduct or content of any third party on the Service; (iii) any content obtained from the Service; and (iv) unauthorized access, use, or alteration of your transmissions or content.
+    </p>
+
+    <h2>8. Termination</h2>
+    <p>
+        We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms. Upon termination, your right to use the Service will immediately cease. If you wish to terminate your account, you may simply discontinue using the Service. All provisions of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity, and limitations of liability.
+    </p>
+
+    <h2>9. Governing Law and Dispute Resolution</h2>
+    <p>
+        These Terms shall be governed and construed in accordance with the laws of **The State of Delaware, USA**, without regard to its conflict of law provisions. Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights.
+    </p>
+    
+    <h2>10. Modifications</h2>
+    <p>
+      We reserve the right to **modify these Terms** at any time. Any changes will be posted on this page with an updated revision date. Your continued use of the Service after any such changes constitutes your acceptance of the new Terms.
+    </p>
+
+    <h2>11. Contact</h2>
     <p>
       For any inquiries, you can contact us via:
       <br />📧 <a href="mailto:Edumates.net@gmail.com">Edumates.net@gmail.com</a>
