--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -21,27 +21,49 @@
       At <strong>Edumates</strong>, we are committed to protecting our users' privacy. This page explains how we collect, use, and safeguard your information.
     </p>
 
-    <h2>Information We Collect</h2>
+    <h2>1. Information We Collect</h2>
     <ul>
       <li>Your **email address** when you sign up using a Google account.</li>
       <li>**Analytics data** automatically gathered via **Google Analytics** to monitor site usage and enhance the user experience.</li>
       <li>User **ratings and conversations** within the platform.</li>
     </ul>
 
-    <h2>How We Use Your Information</h2>
+    <h2>2. How We Use Your Information</h2>
     <p>
       We use this data strictly to **improve the user experience**, develop the platform, and analyze overall performance. We do **not** sell or share user data with any third party.
     </p>
-	<h2>Important Notice</h2>
-	<p>
-	All ratings published on Edumates reflect the **opinions of the users only** and do not necessarily represent the view of the site administration. Edumates provides links to **external educational resources** for guidance and assistance, but we bear **no responsibility** for their content, updates, or intellectual property rights.
- </p>  
-   <h2>Security</h2>
+
+    <h2>3. Data Security</h2>
     <p>
       We maintain the security of user data by utilizing **Firebase** services and constantly updated security measures.
     </p>
 
-    <h2>Contact Us</h2>
+    <h2>4. Cookies and Tracking Technologies</h2>
+    <p>
+        Edumates uses cookies and similar tracking technologies to track the activity on our Service and hold certain information. Cookies are files with a small amount of data which may include an anonymous unique identifier. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service. The primary tracking technology used is **Google Analytics** for site usage monitoring.
+    </p>
+
+    <h2>5. Children's Privacy</h2>
+    <p>
+        The Edumates Service is not intended for use by individuals under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13. If you are a parent or guardian and you are aware that your child has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.
+    </p>
+
+    <h2>6. Data Retention and Your Rights</h2>
+    <p>
+        We will retain your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your Personal Data to the extent necessary to comply with our legal obligations. You have the right to request access to, correction of, or deletion of your personal data. To exercise these rights, please contact us at the email address provided below.
+    </p>
+
+    <h2>7. Policy Updates</h2>
+    <p>
+        We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.
+    </p>
+
+    <h2>8. Important Notice</h2>
+    <p>
+        All ratings published on Edumates reflect the **opinions of the users only** and do not necessarily represent the view of the site administration. Edumates provides links to **external educational resources** for guidance and assistance, but we bear **no responsibility** for their content, updates, or intellectual property rights.
+    </p> 
+
+    <h2>9. Contact Us</h2>
     <p>
       For any inquiries regarding this Privacy Policy, please contact us via:
       <br />📧 <a href="mailto:Edumates.net@gmail.com">Edumates.net@gmail.com</a>
