--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -352,25 +352,48 @@
     </div>
   </section>
 
-  <footer class="site-footer">
-      <div class="footer-container">
-      <div class="footer-brand">
-        <h2 class="footer-logo">Edumates</h2>
-        <p class="footer-description">Interactive learning platform helping you develop skills and achieve your goals.</p>
-        <div class="social-links">
-          <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+    <footer class="site-footer" id="footer">
+        <div class="footer-container">
+            <div class="footer-brand">
+                <h2 class="footer-logo">Edumates</h2>
+                <p class="footer-description">A structured learning platform built to guide you from beginner to job-ready.</p>
+                <div class="social-links">
+                   <a href="https://www.facebook.com/profile.php?id=61573714877124" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/edumates_?t=7uVsGeKx1uNor4VjoeSAzg&s=09" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/mostafa-edumates-2ba076378?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><i class="fab fa-linkedin-in"></i></a> 
+                </div>
+            </div>
+
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h3 class="footer-title">Quick Links</h3>
+                    <ul>
+                        <li><a href="../index.html" class="footer-link">Home</a></li>
+                        <li><a href="#" class="footer-link">Courses</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3 class="footer-title">Support</h3>
+                    <ul>
+                        <li><a href="../legal/privacy-policy.html" class="footer-link"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                        <li><a href="../legal/terms-of-use.html" class="footer-link"><i class="fas fa-chevron-right"></i> Terms of Use</a></li>
+                       <li><a href="../legal/about.html" class="footer-link"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3 class="footer-title">Contact Us</h3>
+                    <ul>
+                        <li><a href="https://wa.me/+201055415811" class="footer-link"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                        <li><a href="mailto:m41940147@gmail.com" class="footer-link"><i class="fas fa-envelope"></i> Email Support</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="footer-links">
-         </div>
-    </div>
-    <div class="footer-bottom">
-      <p class="copyright">© <span class="current-year"></span> Edumates. All rights reserved.</p>
-    </div>
-  </footer>
-  
+        <div class="footer-bottom">
+            <p class="copyright">© <span class="current-year"></span> Edumates. All rights reserved.</p>
+        </div>
+    </footer>
   <script type="module" src="courses-det-script.js"></script>
 </body>
 </html>
+
