--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -368,16 +368,16 @@
                 <div class="footer-column">
                     <h3 class="footer-title">Quick Links</h3>
                     <ul>
-                        <li><a href="../index.html" class="footer-link">Home</a></li>
-                        <li><a href="#" class="footer-link">Courses</a></li>
+                        <li><a href="../../index.html" class="footer-link">Home</a></li>
+                        <li><a href="../../courses-page/courses.html" class="footer-link">Courses</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3 class="footer-title">Support</h3>
                     <ul>
-                        <li><a href="../legal/privacy-policy.html" class="footer-link"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
-                        <li><a href="../legal/terms-of-use.html" class="footer-link"><i class="fas fa-chevron-right"></i> Terms of Use</a></li>
-                       <li><a href="../legal/about.html" class="footer-link"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                        <li><a href="../../legal/privacy-policy.html" class="footer-link"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                        <li><a href="../../legal/terms-of-use.html" class="footer-link"><i class="fas fa-chevron-right"></i> Terms of Use</a></li>
+                       <li><a href="../../legal/about.html" class="footer-link"><i class="fas fa-chevron-right"></i> About Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -396,4 +396,5 @@
   <script type="module" src="courses-det-script.js"></script>
 </body>
 </html>
+
 
