--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -388,18 +388,9 @@
             </div>
         </div>
     </div>
-
-    <div class="chat-popup" id="chatPopup" aria-hidden="true">
-      <div class="chat-content">
-        <i class="fas fa-times close-chat" id="closeChat" aria-label="Close Chat"></i>
-        <h2>Student Chat</h2>
-        <div class="chat-loading" id="chatLoading">Loading...</div>
-        <div class="chat-messages" id="chatMessages"></div>
-        <div class="chat-input">
-          <input type="text" id="messageInput" placeholder="Type your message here..." aria-label="Type message">
-          <button class="send-message-btn" id="sendMessageBtn">
-            <i class="fas fa-paper-plane"></i> Send
-          </button>
+<button class="action-btn" onclick="window.location.href='new-page.html'">
+    <i class="fas fa-envelope"></i> frontend chat
+</button>
         </div>
       </div>
     </div>
@@ -476,3 +467,4 @@
   <script type="module" src="courses-det-script.js"></script>
 </body>
 </html>
+
