--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -35,9 +35,9 @@
       <h2>Frontend Developer Path</h2>
       <p>Master web development from beginner to intermediate with curated free and paid resources.</p>
       <button class="view-roadmap-btn" id="viewRoadmapBtn">View Roadmap</button>
-      <button class="chat-btn" id="chatBtn">
+      <a href="#" class="chat-btn" id="chatBtn">
         <i class="fas fa-comments"></i> Chat
-      </button>
+      </a>
       
       <div class="roadmap-modal" id="roadmapModal">
         <div class="roadmap-content">
@@ -464,4 +464,5 @@
   <script type="module" src="courses-det-script.js"></script>
 </body>
 </html>
+
 
