--- a/courses/frontend/courses-det.html
+++ b/courses/frontend/courses-det.html
@@ -35,7 +35,7 @@
       <h2>Frontend Developer Path</h2>
       <p>Master web development from beginner to intermediate with curated free and paid resources.</p>
       <button class="view-roadmap-btn" id="viewRoadmapBtn">View Roadmap</button>
-      <a href="#" class="chat-btn" id="chatBtn">
+      <a href="index.html" class="chat-btn" id="chatBtn">
         <i class="fas fa-comments"></i> Chat
       </a>
       
@@ -464,5 +464,6 @@
   <script type="module" src="courses-det-script.js"></script>
 </body>
 </html>
+
 
 
