--- a/courses/frontend/chat/index.html
+++ b/courses/frontend/chat/index.html
@@ -9,33 +9,34 @@
 </head>
 <body>
 
-    <div id="consentModal" class="modal-overlay">
+    <div id="termsModal" class="modal-overlay">
         <div class="modal-content">
-            <h2 class="modal-title"><i class="fas fa-shield-alt"></i> بوابة الدخول الآمن</h2>
-            <div class="modal-body">
-                <p>مرحباً بك في <strong>Frontend Chat</strong>. للمتابعة، يجب الموافقة على التالي:</p>
-                <ul class="terms-list">
-                    <li><i class="fas fa-check"></i> عمري أكبر من 13 عاماً.</li>
-                    <li><i class="fas fa-check"></i> وافقت على <span>سياسة الخصوصية</span> و <span>شروط الاستخدام</span>.</li>
-                    <li><i class="fas fa-check"></i> هذا الشات للغرض <strong>التعليمي فقط</strong>.</li>
-                    <li><i class="fas fa-ban"></i> يمنع نشر الروابط، أرقام الهواتف، أو حسابات التواصل الاجتماعي.</li>
-                    <li><i class="fas fa-ban"></i> يمنع استخدام الألفاظ النابية أو المسيئة.</li>
-                </ul>
-                <div class="input-group">
-                    <label>اختر اسماً مستعاراً (للعرض فقط):</label>
-                    <input type="text" id="guestNameInput" placeholder="اكتب اسمك هنا..." maxlength="15">
-                </div>
-                <p id="loginError" class="error-msg"></p>
+            <h2><i class="fas fa-shield-alt"></i> بوابة Frontend Chat الآمنة</h2>
+            <p>مرحباً بك في المجتمع التعليمي. للدخول، يجب الموافقة على الشروط التالية:</p>
+            
+            <ul class="terms-list">
+                <li><i class="fas fa-check-circle"></i> أوافق على <strong>سياسة الخصوصية</strong> وشروط الاستخدام.</li>
+                <li><i class="fas fa-check-circle"></i> عمري لا يقل عن <strong>13 عاماً</strong>.</li>
+                <li><i class="fas fa-check-circle"></i> هذا المحادثة للغرض <strong>التعليمي والبرمجي فقط</strong>.</li>
+                <li><i class="fas fa-check-circle"></i> يمنع تبادل أرقام الهواتف أو الروابط الخارجية.</li>
+            </ul>
+
+            <div class="input-group">
+                <label>اختر اسماً مستعاراً للمحادثة:</label>
+                <input type="text" id="guestNameInput" placeholder="اكتب اسمك هنا (مثال: مبرمج مبتدئ)" maxlength="15">
             </div>
-            <button id="acceptBtn" class="btn-agree">موافق ودخول</button>
+
+            <button id="agreeBtn" class="btn-agree" disabled>موافق ودخول</button>
         </div>
     </div>
 
     <nav class="navbar">
-        <div class="nav-brand">Frontend Chat <span class="badge">Education Only</span></div>
+        <div class="nav-brand"><i class="fas fa-code"></i> Frontend Chat</div>
         <div class="user-controls">
-            <div id="userInfo" class="user-badge hidden">
-                <div class="avatar-circle" id="userAvatar"></div>
+            <div id="userInfo" class="hidden">
+                <div class="avatar-placeholder" id="userAvatar">
+                    <i class="fas fa-user"></i>
+                </div>
                 <span id="userName">زائر</span>
                 <button id="logoutBtn" class="btn-icon" title="خروج"><i class="fas fa-sign-out-alt"></i></button>
             </div>
@@ -44,9 +45,13 @@
 
     <main class="chat-wrapper">
         <div class="messages-container" id="messagesList">
+            <div class="welcome-msg">
+                <i class="fas fa-comments"></i>
+                <p>أهلاً بك في الشات التعليمي. تذكر أن تلتزم بالاحترام.</p>
             </div>
+        </div>
 
-        <div class="input-area hidden" id="inputArea">
+        <div class="input-area">
             <div id="replyPreview" class="reply-preview hidden">
                 <div class="reply-info">
                     <span class="replying-to-label">الرد على:</span>
@@ -57,12 +62,11 @@
             </div>
 
             <form id="messageForm" class="message-form">
-                <input type="text" id="msgInput" placeholder="اكتب سؤالك التعليمي هنا..." autocomplete="off">
-                <button type="submit" id="sendBtn">
+                <input type="text" id="msgInput" placeholder="اكتب رسالة تعليمية..." autocomplete="off" disabled>
+                <button type="submit" id="sendBtn" disabled>
                     <i class="fas fa-paper-plane"></i>
                 </button>
             </form>
-            <div id="securityWarning" class="security-warning"></div>
         </div>
     </main>
 
