--- a/courses/frontend/chat/index.html
+++ b/courses/frontend/chat/index.html
@@ -27,7 +27,10 @@
             </div>
         </div>
     </nav>
-
+<div id="activeUsersBar" class="active-users-bar hidden">
+        <span class="online-dot"></span>
+        <span id="activeCount">0</span> Students Online
+    </div>
     <main class="chat-wrapper">
         
         <div class="messages-container" id="messagesList">
@@ -89,3 +92,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
