--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero-section">
         <div class="hero-content">
             <h1 class="hero-title"> افضل طريقة للبدأ-Edumates</h1>
-            <p class="hero-subtitle"> افضل المصادر والخرائط </p>
+            <p class="hero-subtitle"> افضل المصادر العربيه مرتبه ومقيمه يتم تحديثها دوريا</p>
             <a href="courses-page/courses.html" class="btn primary-btn">ابدأ الان مجانا</a>
         </div>
         <div class="hero-image">
@@ -48,26 +48,26 @@
         <div class="feature-card">
             <i class="fas fa-chalkboard-teacher feature-icon"></i>
             <h3 class="feature-title">مصادر موثوقه</h3>
-            <p class="feature-desc"> جميع المصادر الموثوقه والتي تاخذك للاحتراف مصادر مختارة بعناية</p>
+            <p class="feature-desc">جميع المصادر العربيه منظمة ومختارة بعناية</p>
         </div>
         <div class="feature-card">
             <i class="fas fa-tasks feature-icon"></i>
             <h3 class="feature-title">محادثة تفاعلية</h3>
-            <p class="feature-desc">تحدث مع متعلمين في نفس مستواك من كل مكان</p>
+            <p class="feature-desc">تحدث مع متعلمين في نفس مستواك من جميع انحاء الوطن العربي</p>
         </div>
     </section>
 
     <section id="courses" class="courses-section">
         <div class="section-header">
             <h2>خطط تعليميه متكاملة </h2>
-            <p>تتضمن خرائط طريق واضحه للبدأ مع مصادر منتقاه بعناية</p>
+            <p>خطط تعليميه تنظم لك مسارك اثناء التعلم</p>
         </div>
     </section>
 
     <section id="about" class="about-section">
         <div class="section-header">
             <h2>عن Edumates</h2>
-            <p>افضل مكان للبدأ</p>
+            <p>جميع المصادر العربيه مرتبه ومنظمه في خرائط طريق واضحه</p>
         </div>
     </section>
 
@@ -109,6 +109,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
